@@ -26,6 +26,8 @@ NameVirtualHost *
                 # Map /user/xxx URLs into ?user=xxx format
                 RewriteRule   ^user/img/(.+)$  /img/$1                 [PT,L,QSA]
                 RewriteRule   ^user/(.+)$      /index.html?user=$1     [PT,L,QSA]
+                # Map /banner/xxx URLs into ?user=xxx format
+                RewriteRule   ^banner/(.+)$     /banner/banner.php?user=$1     [PT,L,QSA]
 
                 # Compress output (enable mod_deflate)
                 AddOutputFilterByType DEFLATE text/html text/css text/plain text/xml text/javascript application/x-javascript
