@@ -117,6 +117,12 @@
 
 	    <p>If you have an account on <a href="http://facebook.com">Facebook</a>, you can also install the <a href="http://apps.facebook.com/openflights">OpenFlights Facebook app</a>, which can show your key stats to your Facebook profile and notify your friends when you add new flights.</p>
 
+	    <p>If you have a blog or other website, or post to bulletin boards/forums, you can add an OpenFlights banner like this:</p>
+
+	    <p><a href="http://openflights.org/user/jpatokal"><img src="/banner/jpatokal.png" width=400 height=70></a></p>
+
+	    <p>To get pregenerated banner code for blogs (HTML format) and for bulletin boards (phpBB), just log into your account and click on <input type="button" value="Settings" align="middle">.</p>
+
 	    <h4>Can my friends also edit my flights?</h4>
 
 	    <p>Yes, <i>if</i> you give them your password.  You'd better trust them though, since they can now change all your settings and even delete your flights.  While the system does not <i>officially</i> support being logged in as the same user from many places at once, in practice this is <i>unlikely</i> to cause problems.</h4>
